Sections: fix for FF on mobile

--- a/src/components/Layout/Sections/style.module.less
+++ b/src/components/Layout/Sections/style.module.less
@@ -97,6 +97,7 @@
 .inner {
   overflow-wrap: break-word;
   word-wrap: break-word;
+  max-width: 100%;
   .contentGridSlim();
 
   > :last-child {
